--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="daa2b3">  <td>23/10/16 19:56:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utilities.beforeClass()[pri:0, instance:testNG.Registration@e350b40]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@810267739</td>   <td></td> </tr>
+<tr bgcolor="8bceaf">  <td>23/10/17 15:47:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utilities.beforeClass()[pri:0, instance:testNG.Registration@1e0b4072]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="a1cb84">  <td>23/10/17 15:47:43</td>   <td>4768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.f()[pri:0, instance:testNG.Registration@1e0b4072]">f</td> 
+  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="8bceaf">  <td>23/10/17 15:47:46</td>   <td>7919</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Utilities.afterClass()[pri:0, instance:testNG.Registration@1e0b4072]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="8bceaf">  <td>23/10/17 15:47:46</td>   <td>7587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Utilities.afterMethod()[pri:0, instance:testNG.Registration@1e0b4072]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1128132589</td>   <td></td> </tr>
 </table>
